hphp/test/zend/good/Zend/tests/bug33318.php.expectf

Fatal error: Exceptions must implement the Throwable interface, got int. in %s/bug33318.php on line 2
